cabal-version:      2.4
name:               advent-of-code2020
version:            0.1.0.0
author:             Paolo
maintainer:         mrtnpaolo@protonmail.com
license:            ISC
license-file:       LICENSE
copyright:          2020 Paolo Martini <mrtnpaolo@protonmail.com>

library
    exposed-modules:    Advent,
                        Advent.Coord,
                        Advent.Queue,
                        Advent.Search
    build-depends:      base ^>=4.14.1.0,
                        containers ^>=0.6.2.1
    hs-source-dirs:     common
    default-language:   Haskell2010

executable Day01
    main-is:            Day01.hs
    build-depends:      base ^>=4.14.1.0,
                        advent-of-code2020,
                        containers ^>=0.6.2.1
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: TypeApplications

executable Day02
    main-is:            Day02.hs
    build-depends:      base ^>=4.14.1.0,
                        advent-of-code2020,
                        containers ^>=0.6.2.1
    hs-source-dirs:     execs
    default-language:   Haskell2010

executable Day03
    main-is:            Day03.hs
    build-depends:      base ^>=4.14.1.0,
                        advent-of-code2020,
                        containers ^>=0.6.2.1
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ParallelListComp

executable Day04
    main-is:            Day04.hs
    build-depends:      base ^>=4.14.1.0,
                        advent-of-code2020,
                        containers ^>=0.6.2.1,
                        split ^>=0.2.3.4
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ViewPatterns

executable Day05
    main-is:            Day05.hs
    build-depends:      base ^>=4.14.1.0,
                        advent-of-code2020,
                        containers ^>=0.6.2.1
    hs-source-dirs:     execs
    default-language:   Haskell2010

executable Day06
    main-is:            Day06.hs
    build-depends:      base ^>=4.14.1.0,
                        advent-of-code2020,
                        containers ^>=0.6.2.1,
                        split ^>=0.2.3.4
    hs-source-dirs:     execs
    default-language:   Haskell2010

executable Day07
    main-is:            Day07.hs
    build-depends:      base ^>=4.14.1.0,
                        advent-of-code2020,
                        containers ^>=0.6.2.1,
                        split ^>=0.2.3.4
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ViewPatterns, TypeApplications

executable Day08
    main-is:            Day08.hs
    build-depends:      base ^>=4.14.1.0,
                        advent-of-code2020,
                        containers ^>=0.6.2.1
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ViewPatterns, RecordWildCards

executable Day09
    main-is:            Day09.hs
    build-depends:      base ^>=4.14.1.0,
                        advent-of-code2020,
                        containers ^>=0.6.2.1,
                        split ^>=0.2.3.4
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ViewPatterns, TypeApplications, RecordWildCards

executable Day10
    main-is:            Day10.hs
    build-depends:      base ^>=4.14.1.0,
                        advent-of-code2020,
                        containers ^>=0.6.2.1,
                        split ^>=0.2.3.4
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ViewPatterns, TypeApplications, RecordWildCards
