cabal-version:      2.4
name:               advent-of-code2020
version:            0.1.0.0
author:             Paolo
maintainer:         mrtnpaolo@protonmail.com
license:            ISC
license-file:       LICENSE
copyright:          2020 Paolo Martini <mrtnpaolo@protonmail.com>

library
    exposed-modules:    Advent,
                        Advent.Coord,
                        Advent.Queue,
                        Advent.Search
    build-depends:      base,
                        containers
    hs-source-dirs:     common
    default-language:   Haskell2010

executable Day01
    main-is:            Day01.hs
    build-depends:      base,
                        advent-of-code2020
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: TypeApplications

executable Day02
    main-is:            Day02.hs
    build-depends:      base,
                        advent-of-code2020
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ViewPatterns

executable Day03
    main-is:            Day03.hs
    build-depends:      base,
                        advent-of-code2020,
                        array
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ViewPatterns, ParallelListComp

executable Day04
    main-is:            Day04.hs
    build-depends:      base,
                        advent-of-code2020,
                        split
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ViewPatterns

executable Day05
    main-is:            Day05.hs
    build-depends:      base,
                        advent-of-code2020
    hs-source-dirs:     execs
    default-language:   Haskell2010

executable Day06
    main-is:            Day06.hs
    build-depends:      base,
                        advent-of-code2020,
                        split
    hs-source-dirs:     execs
    default-language:   Haskell2010

executable Day07
    main-is:            Day07.hs
    build-depends:      base,
                        advent-of-code2020,
                        containers,
                        split
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ViewPatterns, TypeApplications

executable Day08
    main-is:            Day08.hs
    build-depends:      base,
                        advent-of-code2020,
                        containers
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ViewPatterns, RecordWildCards

executable Day09
    main-is:            Day09.hs
    build-depends:      base,
                        advent-of-code2020,
                        containers
    hs-source-dirs:     execs
    default-language:   Haskell2010

executable Day10
    main-is:            Day10.hs
    build-depends:      base,
                        advent-of-code2020,
                        split
    hs-source-dirs:     execs
    default-language:   Haskell2010

executable Day11
    main-is:            Day11.hs
    build-depends:      base,
                        advent-of-code2020,
                        containers,
                        split
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ViewPatterns, ParallelListComp

executable Day12
    main-is:            Day12.hs
    build-depends:      base,
                        advent-of-code2020
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ViewPatterns

executable Day13
    main-is:            Day13.hs
    build-depends:      base,
                        advent-of-code2020,
                        split
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ViewPatterns

executable Day14
    main-is:            Day14.hs
    build-depends:      base,
                        advent-of-code2020,
                        containers,
                        split
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ViewPatterns

executable Day15
    main-is:            Day15.hs
    build-depends:      base,
                        advent-of-code2020,
                        array,
                        containers,
                        split
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost, NumericUnderscores, TypeApplications

executable Day16
    main-is:            Day16.hs
    build-depends:      base,
                        advent-of-code2020,
                        containers,
                        split
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ViewPatterns, TypeApplications, OverloadedLists

executable Day17
    main-is:            Day17.hs
    build-depends:      base,
                        advent-of-code2020,
                        containers
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost, ViewPatterns

executable Day18
    main-is:            Day18.hs
    build-depends:      base,
                        advent-of-code2020
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost

executable Day19
    main-is:            Day19.hs
    build-depends:      base,
                        advent-of-code2020, array, containers, split, regex-base, regex-tdfa
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost, NumericUnderscores, TypeApplications, ViewPatterns, RecordWildCards, ParallelListComp

executable Day20
    main-is:            Day20.hs
    build-depends:      base,
                        advent-of-code2020, array, containers, split
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost, NumericUnderscores, TypeApplications, ViewPatterns, RecordWildCards, ParallelListComp

executable Day21
    main-is:            Day21.hs
    build-depends:      base,
                        advent-of-code2020,
                        containers,
                        split
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions: ImportQualifiedPost

-- executable Day22
--     main-is:            Day22.hs
--     build-depends:      base,
--                         advent-of-code2020, array, containers, split
--     hs-source-dirs:     execs
--     default-language:   Haskell2010
--     default-extensions: ImportQualifiedPost, NumericUnderscores, TypeApplications, ViewPatterns, RecordWildCards, ParallelListComp

-- executable Day23
--     main-is:            Day23.hs
--     build-depends:      base,
--                         advent-of-code2020, array, containers, split
--     hs-source-dirs:     execs
--     default-language:   Haskell2010
--     default-extensions: ImportQualifiedPost, NumericUnderscores, TypeApplications, ViewPatterns, RecordWildCards, ParallelListComp

-- executable Day24
--     main-is:            Day24.hs
--     build-depends:      base,
--                         advent-of-code2020, array, containers, split
--     hs-source-dirs:     execs
--     default-language:   Haskell2010
--     default-extensions: ImportQualifiedPost, NumericUnderscores, TypeApplications, ViewPatterns, RecordWildCards, ParallelListComp

-- executable Day25
--     main-is:            Day25.hs
--     build-depends:      base,
--                         advent-of-code2020, array, containers, split
--     hs-source-dirs:     execs
--     default-language:   Haskell2010
--     default-extensions: ImportQualifiedPost, NumericUnderscores, TypeApplications, ViewPatterns, RecordWildCards, ParallelListComp
